--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
       type="text/css" />
 
 
-    <link href="css/carousel.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
 
 
@@ -37,7 +37,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="" style="padding: 0px; margin-right: 10px;" href="#">
+              <a class="" style="padding: 0px; margin-right: 10px;" href="index.html">
               <img style="max-width:50px; " src="img/logo50x50.png">              
               <img style="max-width:50px;" src="img/logo-dodoshop.png">
 
@@ -45,10 +45,10 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="">Shop</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a href="">Studio</a></li>
-                <li><a href="about.html">About</a></li>
+                <li class="active"><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 
               </ul>
