--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       type="text/css" />
 
 
-    <link href="css/carousel.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="js/script.js"></script>
 
@@ -39,18 +39,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="" style="padding: 0px; margin-right: 10px;" href="#">
+              <a class="" style="padding: 0px; margin-right: 10px;" href="index.html">
               <img style="max-width:50px; " src="img/logo50x50.png">         
               <img style="max-width:50px;" src="img/logo-dodoshop.png">
               </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="">Shop</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a href="">Studio</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="contact.html">Contact</a></li>
                 
               </ul>
             </div>
