--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="js/ie-emulation-modes-warning.js"></script>
 
 
-    <link href="css/carousel.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
 
 
@@ -41,16 +41,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="" style="padding: 0px; margin-right: 10px;" href="#">
+              <a class="" style="margin-left:10px; margin-right: 10px;" href="index.html">
               <img style="max-width:50px; " src="img/logo50x50.png">              
               <img style="max-width:50px;" src="img/logo-dodoshop.png">
-
               </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="">Shop</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a href="">Studio</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -179,8 +178,7 @@
       <!-- FOOTER -->
       <footer class="footer">
         <p class="pull-right"><a href="#">Вверх</a></p>
-        <p>&copy; 2014 Company, Inc.</p>
-        
+        <p>&copy; 2014 Company, Inc.</p>       
           
       </footer>
 
