Change carousel, image property

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" style="height: auto;" src="img/pic4.jpg" 
+          <img class="first-slide" style=" " src="img/pic4.jpg" 
             alt="First slide">
           <div class="container">
             <div class="carousel-caption">
@@ -86,7 +86,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" style="height: auto;" src="img/pic6.jpg" 
+          <img class="second-slide" style=" " src="img/pic6.jpg" 
             alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
@@ -97,7 +97,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" style="height: auto;" src="img/pic5.jpg" 
+          <img class="third-slide" style=" " src="img/pic5.jpg" 
             alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
