--- a/shop.html
+++ b/shop.html
@@ -103,7 +103,8 @@
         'resizeDuration': 200,
         'wrapAround': true,
         'showImageNumberLabel': false,
-        'fadeDuration': 100
+        'fadeDuration': 100,
+        'alwaysShowNavOnTouchDevices': true
       });
 
 
