--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
               <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
-                <li><a href="">Studio</a></li>
+                <li><a href="studio.html">Studio</a></li>
                 <li class="active"><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 
@@ -94,9 +94,9 @@
         <p>DODO Shop 2015</p>
         </div>
         <div class="socialRound">
-        <a href="https://www.facebook.com/dodoshop.by/?fref=ts"><i class="fa fa-lg fa-facebook"></i></a>
-        <a href="https://vk.com/dodoshop_by"><i class="fa fa-lg fa-vk"></i></a>
-        <a href="https://instagram.com/dodoshop.by/"><i class="fa fa-lg fa-instagram"></i></a>   
+        <a href="https://www.facebook.com/dodoshop.by/?fref=ts" target="_blank"><i class="fa fa-lg fa-facebook"></i></a>
+        <a href="https://vk.com/dodoshop_by" target="_blank"><i class="fa fa-lg fa-vk"></i></a>
+        <a href="https://instagram.com/dodoshop.by/" target="_blank"><i class="fa fa-lg fa-instagram"></i></a>   
         </div>
         <div class="footerRight">
         <p ><a href="#">Вверх</a></p>
